--- a/app/globals.css
+++ b/app/globals.css
@@ -14,10 +14,12 @@
 }
 
 /* 전체 스타일 조정 */
-body {
+html, body {
   margin: 0;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
+}
+body {
   display: flex;
   flex-direction: column;
   background-color:  #F9FAFB;
