--- a/app/globals.css
+++ b/app/globals.css
@@ -16,15 +16,16 @@
 /* 전체 스타일 조정 */
 html, body {
   margin: 0;
+  padding: 0;
   width: 100%;
   height: 100%;
+  overflow-x: hidden;
 }
 body {
   display: flex;
   flex-direction: column;
   background-color:  #F9FAFB;
   font-family: 'NaNumSqure';
-  overflow-x: hidden;
 }
 
 .childrenWrapper {
